--- a/food-delivery/index.css
+++ b/food-delivery/index.css
@@ -28,23 +28,28 @@ header span {
     margin-top: 10px;
     display: flex;
     align-items: center;
-    width: 90%;
+    max-width: 80%;
     margin: 0 auto;
-    padding: 2em;
+    border-bottom:#DEDEDE 2px solid;
+    margin-top: 25px;
+    
     
 }
 .item {
     display: flex;
-    border-bottom:#DEDEDE 2px solid;
     height: 200px;
-    display: flex;
     width: 100%;
-    gap: 10px;
-
+    margin: 20px 0;
+    align-items: center;
+    justify-content: start;
+   
+   
 }
+
 .item h1 {
     margin-top: 0;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
+    font-size: 1.5rem;
 }
 .item img {
     width: 180px;
@@ -55,25 +60,45 @@ header span {
 }
 .item-preview {
     margin-bottom: 5px;
+    
+
 }
 .item-info { 
     padding: 0 2em ;
+    display: block;
+    height: 80%;
+    
 }
 .item-price {
     margin-top: 20px;
     font-size: 1.5em;
+
 }
 .add-item-btn {
     background-color: transparent;
     border-radius: 50%;
     width: 50px;
-
+    margin: 0;
     height: 50px;
     border: #DEDEDE 2px solid;
     color:#3C3C3C;
-    font-size: 2rem;
-   
-   
+    font-size: 2rem; 
+    
+}
+aside button {
+    background-color:#16DB99;
+    border:0;
+    padding: 1em;
+    width: 100vw;
+    color:white;
+
+}
+aside {
+    position: fixed;
+    top:93%;
     
     
+    height: 100%;
+    z-index: 1;
+
 }
