--- a/Oldagram/my-app/src/index.css
+++ b/Oldagram/my-app/src/index.css
@@ -83,6 +83,9 @@ footer {
 .likesNumberSpan,.comment-main-username {
   font-weight: bolder;
 }
+.likesNumberSpan span {
+  margin-left: 4px;
+}
 button {
   background-color: transparent;
   border: none;
@@ -91,6 +94,9 @@ footer section {
   margin-top: 0.6em;
 }
 .comment-main-username {
-  margin-right: 5px;
+  margin-right: 4px;
 }
   
+article {
+  margin-bottom: 1em;
+}
