--- a/Oldagram/my-app/src/index.css
+++ b/Oldagram/my-app/src/index.css
@@ -45,6 +45,33 @@ ul {
   width: 50px;
   height: 50px;
 }
+.main-user-comment-img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+textarea {
+  height: 25px;
+  width: 300px;
+  resize: none;
+  padding: 0.2em 1em;
+  border: none;
+  outline: none;
+  margin-top: 3px;
+  margin-right: 0.3em;
+
+}
+input[type=submit] {
+  color:rgb(3, 108, 168);
+  font-weight: bold;
+  background-color: transparent;
+  border: none;
+}
+
+.comment-section div{
+  gap: 0.5em;
+  width: 100%;
+}
 .flex {
   display:flex;
 }
