--- a/Oldagram/my-app/src/index.css
+++ b/Oldagram/my-app/src/index.css
@@ -15,16 +15,18 @@ code {
   padding:0;
   margin:0;
   box-sizing: border-box;
+  
+  
 }
 header {
-  
   width: 100%;
 }
 .header {
   padding: 1em;
   height: 120px;
+  width: 100%;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.021);
-  display: flex;
+  
   flex-direction: column;
   justify-content: center;
   border-bottom: 2px solid rgba(44, 44, 44, 0.034);
@@ -45,6 +47,9 @@ ul {
   border-radius: 50%;
   width: 50px;
   height: 50px;
+}
+.main-user-avatar-img {
+  margin-top: 1em;
 }
 .main-user-comment-img {
   width: 32px;
@@ -101,6 +106,15 @@ textarea {
 .comments-list li {
   display: grid;
   grid-template-columns: repeat(2,2.5em);
+ 
+  
+}
+.comments-list p {
+  width: 400px;
+  word-wrap: break-word
+}
+.main-comment {
+  width: 85%;
 }
 
 .span {
@@ -114,8 +128,8 @@ textarea {
   color:grey
 }
 .post-img {
-  width: 100%;
-  max-width: 900px;
+  width:100%;
+ 
 }
 footer {
   padding: 0em 1em;
@@ -143,25 +157,53 @@ footer section {
 .comment-main-username {
   margin-right: 4px;
 }
-  
 article {
   margin-bottom: 1em;
 }
+main {
+  overflow-x: hidden;
+}
 
-@media (min-width:450px) {
+@media (min-width:510px) {
   .post-img {
+    min-width: 250px;
     max-width: 500px;
     max-height: 500px;
-  }
-  main {
-    margin: 0 auto;
-   position: relative;
-   display: block;
-   width: 100%;
-    height: 100%;
     
   }
-  textarea {
-    width:80%;
+  main {
+    width: 100%;
+  }
+  .header-post {
+    margin-bottom: 0.5em;
+    margin-left: -10px;
+  }
+  article {
+    margin-bottom: 1.5em;
+  }
+  .main-section {
+    width:100%;
+    padding: 0;
+    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   
+  }
+  .textarea {
+    width:85%;
+  }
+  .main-section article:nth-child(3) {
+    width: 500px;
+    margin-left:-9px;
+    
+  }
+  .main-section article:nth-child(3) .user-comments-container {
+    margin-left: 0px;
+   
+  }
+  .logo-img {
+    width: 40%;
   }
 }
