--- a/Color Scheme Generator/index.css
+++ b/Color Scheme Generator/index.css
@@ -11,6 +11,8 @@ body {
     background-color: white;
     padding: 1.5em;
     width: 99vw;
+    height: 10%;
+  
     
 }
 form {
@@ -57,6 +59,8 @@ select,.random-btn {
    height: 20%;
    width: 100vw;
    display: flex;
+   display: block;
+
    justify-content: center;
    align-items: center;
    font-family: 'Ubuntu Condensed', sans-serif;
@@ -68,17 +72,42 @@ span {
     font-weight: bold;
     width: 100%;
     display: inline-block;
+    text-align: center;
+   
 }
 .color-hex {
-    margin-bottom: 0.8em;
+    margin-top: 15%;
+    margin-bottom: 10px;
 }
+
 .color-hex:hover,.color-hex:focus{ 
-    font-size: 2.5rem;
+    font-size: 2rem;
     
    
  }
+ article {
+    position: relative;
+ }
+ article::after {
+    content: attr(text);
+    width:25%;
+    height: 60px;
+    border-radius: 10%/100%;
+    background-color: black;
+    left:50%;
+    top:80%;
+    transform: translate(-50%,0%);
+    opacity: 0.8;
+    position: absolute;
+    animation: fade 2s ease-in forwards;
+ }
+ @keyframes fade {
+    100% {
+        opacity: 0;
+    }
+ }
 
-@media(min-width:580px) {
+@media(min-width:700px) {
     .random-btn {
        display: inline;
        padding: 0.8em;
@@ -122,8 +151,15 @@ span {
         font-size: 2rem;
         transform: translate(-50%,50%);
        
+    } 
+    .color-hex {
+        margin-bottom: 0.8em;
     }
-    
-    
+    .color-hex:hover,.color-hex:focus{ 
+        font-size: 2.5rem;
+        
+       
+     }
+  
 
 }
