--- a/Tindog/style.css
+++ b/Tindog/style.css
@@ -36,19 +36,21 @@ ul {
     position: relative;
 }
 .profiles img {
-    width: 97%;
+    width: 97vw;
     border-radius: 3%;
-    height: 100%;
+    height: 600px;
     max-width: 500px;
     
 }
 .user-information-container {
     position: absolute;
-    bottom:110px;
+    bottom:20px;
     left:6%;
     z-index: 1;
     color: white;
-    width: 75%;
+    max-width: 300px;
+    height: 20%;
+    text-shadow: 0px 2px 10px rgb(0, 0, 0);
 }
 .user-information-container h1{
     font-size: 1.5rem;
@@ -63,10 +65,9 @@ ul {
     display: flex;
     align-items: center;
     gap: 1.5em;
-   
 }
 .profiles {
- 
+    position: relative;
     justify-content: center;
 }
 .btns-container button {
@@ -75,11 +76,9 @@ ul {
     background-color: white;
     border: none;
     box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.116);
-   
 }
 .btns-container img {
     width: 30px;
-  
 }
 .like-btn:hover,.like-btn:focus {
     background-color: #DBFFF4;
@@ -87,4 +86,14 @@ ul {
 .pass-btn:hover,.pass-btn:focus {
     background-color: #FFE7EF;
 }
-
+.badge-span{
+    z-index: 1;
+    position: absolute;
+    left: 5%;
+    top:4%;
+    transform: rotate(-20deg);
+}
+.badge-span img {
+    width: 60%;
+    height: 100%;
+}
