--- a/Tindog/style.css
+++ b/Tindog/style.css
@@ -86,6 +86,19 @@ ul {
 .pass-btn:hover,.pass-btn:focus {
     background-color: #FFE7EF;
 }
+.dot {
+    width: 10px;
+    height: 10px;
+    border: none;
+    background-color: rgb(173, 173, 173);
+    margin-left: .2em;
+    border-radius: 50%;
+    z-index: 1;
+}
+.dots-container {
+    z-index: 1;
+    position: absolute;
+}
 .badge-span{
     z-index: 1;
     position: absolute;
@@ -96,4 +109,35 @@ ul {
 .badge-span img {
     width: 60%;
     height: 100%;
+    background-size: cover ;
+    background-position: center;
+}
+.end-message-container {
+    background-color:white;
+    padding: 1.3em;
+    height: 200px;
+    width: 90%;
+    border-radius: 10%/20%;
+    box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.116);
+    position: relative;
+    left: 45%;
+    top: 50%;
+    margin: 0;
+    text-align: center;
+    transform: translate(-50%,50%);
+    
+}
+.heart {
+    width: 40px;
+    fill:#fd4929;
+    margin-bottom: 1em;
+    animation: pump 2s infinite;
+}
+@keyframes pump {
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
