--- a/Tindog/style.css
+++ b/Tindog/style.css
@@ -44,20 +44,26 @@ ul {
 }
 .user-information-container {
     position: absolute;
-    bottom:20px;
+    bottom:2.5em;
     left:6%;
     z-index: 1;
     color: white;
-    max-width: 300px;
+    width: 90%;
+    max-width: 400px;
     height: 20%;
-    text-shadow: 0px 2px 10px rgb(0, 0, 0);
+    
 }
+.user-information-container,#user-location {
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.897);
+}
+
 .user-information-container h1{
     font-size: 1.5rem;
 }
 .user-information-container p {
     margin-top: 8px;
     font-weight: 200;
+    margin-bottom: 10px;
 }
 .btns-container {
     margin-top: 1.2em;
@@ -133,9 +139,27 @@ ul {
     transform: translate(-50%,50%);
     
 }
+.user-location {
+    display: flex;
+    align-items: center;
+    margin-top: 1em;
+}
+.settings-icon {
+    width: 40px;
+    height: 40px;
+}
+#location-icon {
+    width: 20px;
+    height: 20px;
+}
+.user-location {
+    font-weight: 300;
+    margin-top: .5em;
+    
+}
 .heart {
     width: 40px;
-    fill:#fd4929;
+    fill:#ff4756;
     margin-bottom: 1em;
     animation: pump 2s infinite;
 }
