const get adicionada

--- a/Tindog/style.css
+++ b/Tindog/style.css
@@ -140,10 +140,10 @@ ul {
     box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.116);
     position: absolute;
     left: 50%;
-    top: 0%;
+    
     margin: 0;
     text-align: center;
-    transform: translate(-50%,50%);
+    transform: translate(-50%,100%);
     
 }
 input[type="range"]{
@@ -168,6 +168,7 @@ input[type="range"]{
     margin: 0 auto;
     position: relative;
     margin-bottom: 30px;
+   
 }
 /*.slider-track{
     width: 100%;
@@ -248,6 +249,7 @@ input[type="range"]::-ms-thumb{
     order: -1;
     margin-top: 1em;
     width: 20%;
+    display: none;
 }
 
 fieldset {
@@ -278,7 +280,8 @@ legend {
     background: linear-gradient(-90deg,#FF655B,#ff4756,#fe3c72, #FD297B);
     color:white;
     font-size: 0.9rem;
-    margin-bottom: 1.5em;
+    margin-top: 1.2em;
+    margin-bottom: .5em;
     text-align: center;
 }
 /*input[type="range"] {
@@ -326,4 +329,11 @@ body {
    top:30%;
 
 }
+}
+
+.open {
+    display:inline
+}
+.close {
+    display:none
 }
