--- a/Tindog/style.css
+++ b/Tindog/style.css
@@ -259,7 +259,7 @@ legend {
 }
 .user-location {
     font-weight: 300;
-    margin-top: 10px;  
+    margin-top: 10px;  !dogsProfiles.find(e => e.hasBeenSwiped == true)
 }
 .heart {
     width: 40px;
